--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI= react-scripts build",
     "lint": "eslint --ext .js --ext .jsx --ignore-pattern **/*.test.js src/",
     "precise-commits": "precise-commits  --whitelist \"**/src/**/*\" --check-only",
     "husky": "npm run lint && npm run precise-commits",
